# Python-FastAPI-Template

./: .env.template  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: automate_test.yaml
app/: app.py  constants.py
app/config/: settings.py
test/: conftest.py  test_app.py  test_constants.py
