[project]
name = "python-fastapi-template"
version = "0.1.0"
description = "Template for building backend using python and FastAPI."
authors = [
    {name = "Master Dev"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "fastapi[all] (>=0.115.8,<0.116.0)",
    "ruff (>=0.9.4,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
